# kaggle-mcp-server

./: .editorconfig  .gitignore  .sublime-project  Dockerfile  FOL_WORKBENCH_README.md  IKYKE_README.md  ML_STRATEGY_README.md  Makefile  QUICKSTART.md  README.md  REVERSE_SIMULATION_GUIDE.md  SYSTEM_README.md  bayesian_extractor_example.json  docker-compose.yml  fol_workbench.py  package-lock.json  pyproject.toml  requirements.txt  test_agent_encrypted_comms.py  test_gpg.py  test_kmap_simplifier.py  test_prolog.py
src/fol_workbench/: __init__.py  autocomplete.py  autocomplete_widget.py  bayesian_feature_extractor.py  bayesian_feature_extractor_example.py  conversation_semantic_model.py  data_layer.py  database.py  decision_tree_designer.py  design_feedback.py  document_generator.py  evaluation.py  examples.py  herbrand_converter.py  herbrand_converter_fix.py  hypothesis_dialog.py  hypothesis_tester.py  ikyke_container.py  ikyke_demo.py  ikyke_format.py  ikyke_protocol.py  kaggle_notebook_generator.py  kaggle_prolog_demo.py  kmap_simplifier.py  kmap_widget.py  llm_observation_generator.py  logic_layer.py  main.py  ml_strategy_dialog.py  ml_strategy_integration.py  predicate_dialog.py  prolog_brain.py  reverse_simulation_system.py  set_evaluation_dialog.py  storage.py  system_integration.py  task_engine.py  test_first_simulator.py  ui_layer.py  web_scraper.py
src/fol_workbench/puzzle_detection/: __init__.py  bayesian_perceptron_assigner.py  confidence_evaluator.py  feature_extractor.py  grid_segmentation.py  (+6 more)
src/kaggle_mcp_server/: __init__.py  server.py
