[project]
name = "kaggle-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with Kaggle API - search competitions, datasets, download files, and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "kaggle>=1.6.0",
    "PyQt6>=6.6.0",
    "z3-solver>=4.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_mcp_server"]
